[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swing_trading"
version = "0.1.0"
description = "A library for fetching crypto data and calculating trading indicators."
readme = "README.md"
requires-python = ">=3.12.0,"
license = "MIT"
authors = [
  {name = "Kevin Off", email = "kevonoff@gmail.com"},
]
maintainers = [
  {name = "Kevin Off", email = "kevonoff@gmail.com"},
]
keywords = ["ccxt", "trading", "crypto", "swing trading", "indicators"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "ccxt",
    "pandas",
    "pandas-ta",
]

[project.scripts]
swing_trading_cli = "main:main" # This assumes you have a main() function in your main.py

[tool.setuptools]
packages = ["swing_trading"] # Replace with the actual name of your source directory/package

#[tool.setuptools.packages]
# If you are using a src/ directory for your code:
# find = {}

# If you are using the root directory for your code (e.g., main.py is at the top level and is the only file):
# It is generally recommended to place your main logic inside a proper package folder (e.g., cctx_lib/)
# However, for a simple main.py, you would typically rely on the [project.scripts] entry point.